发布视频/照片部分搭建完成

--- a/LittlePink-Book/infoPlist.strings
+++ b/LittlePink-Book/infoPlist.strings
@@ -1,4 +1,4 @@
-/* 
+/*
   infoPlist.strings
   LittlePink-Book
 
@@ -6,4 +6,4 @@
   
 */
 
-"CFBundleDisplayName" = "小粉书"
+"CFBundleDisplayName" = "小粉书";
