--- a/LittlePink/Resources/zh-Hans.lproj/InfoPlist.strings
+++ b/LittlePink/Resources/zh-Hans.lproj/InfoPlist.strings
@@ -2,7 +2,7 @@
   InfoPlist.strings
   LittlePink
 
-  Created by 刘军 on 2020/11/14.
+  Created by 王潇 on 2020/11/14.
   
 */
 "CFBundleDisplayName" = "小粉书";
